# desktop-pet

./: .gitignore  README.md  control.html  index.html  package.json  tsconfig.json  vite.config.ts
model/: 兔兔-阿米娅.model3.json
model/config/: 兔兔-阿米娅.prprl2d.json
public/model/config/: 兔兔-阿米娅.vtube.json
public/model/core/: 兔兔-阿米娅.model3.json
src/: app.ts  control.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
