[package]
name = "desktop-pet-amyy"
version = "0.1.0"
description = "兔兔-阿米娅 Live2D Desktop Pet"
authors = ["you"]
edition = "2021"

[lib]
name = "desktop_pet_amyy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
